[gd_scene load_steps=5 format=3 uid="uid://ceb3j2c7u1naw"]

[ext_resource type="Script" path="res://src/LogTabletManager.gd" id="1_0bagq"]
[ext_resource type="StyleBox" uid="uid://dupn6lack6vad" path="res://assets/Styles/LogStyle.tres" id="2_fkkl1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bh65i"]
bg_color = Color(0.109804, 0.109804, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hv2sh"]
bg_color = Color(1, 0.783333, 0, 0.576471)

[node name="Panel" type="Panel"]
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(0.375002, 0.374999)
theme_override_styles/panel = SubResource("StyleBoxFlat_bh65i")
script = ExtResource("1_0bagq")
items = ["Anna                bla bla bla", "Filip                                    bla bla bla"]
icons = [null, null]

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 720.0
theme_override_colors/guide_color = Color(0.109804, 0.109804, 0.109804, 1)
theme_override_colors/font_color = Color(1, 0.783333, 0, 1)
theme_override_colors/font_hovered_color = Color(1, 1, 1, 1)
theme_override_constants/v_separation = 120
theme_override_font_sizes/font_size = 40
theme_override_styles/panel = ExtResource("2_fkkl1")
theme_override_styles/hovered = SubResource("StyleBoxFlat_hv2sh")
allow_search = false

[node name="Log1" type="Panel" parent="."]
layout_mode = 0
offset_left = 394.664
offset_top = 2.66667
offset_right = 1274.66
offset_bottom = 722.667
theme_override_styles/panel = ExtResource("2_fkkl1")

[node name="Label" type="Label" parent="Log1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50

[node name="Log2" type="Panel" parent="."]
layout_mode = 0
offset_left = 394.664
offset_top = 2.66667
offset_right = 1274.66
offset_bottom = 722.667
theme_override_styles/panel = ExtResource("2_fkkl1")

[node name="Label" type="Label" parent="Log2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50

[node name="Log3" type="Panel" parent="."]
layout_mode = 0
offset_left = 394.664
offset_top = 2.66667
offset_right = 1274.66
offset_bottom = 722.667
theme_override_styles/panel = ExtResource("2_fkkl1")

[node name="Label" type="Label" parent="Log3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50

[node name="Log4" type="Panel" parent="."]
layout_mode = 0
offset_left = 394.664
offset_top = 2.66667
offset_right = 1274.66
offset_bottom = 722.667
theme_override_styles/panel = ExtResource("2_fkkl1")

[node name="Label" type="Label" parent="Log4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50

[node name="Log5" type="Panel" parent="."]
layout_mode = 0
offset_left = 394.664
offset_top = 2.66667
offset_right = 1274.66
offset_bottom = 722.667
theme_override_styles/panel = ExtResource("2_fkkl1")

[node name="Label" type="Label" parent="Log5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50

[node name="Log6" type="Panel" parent="."]
layout_mode = 0
offset_left = 394.664
offset_top = 2.66667
offset_right = 1274.66
offset_bottom = 722.667
theme_override_styles/panel = ExtResource("2_fkkl1")

[node name="Label" type="Label" parent="Log6"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50

[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
